--- a/rpcs3/rpcs3.vcxproj.filters
+++ b/rpcs3/rpcs3.vcxproj.filters
@@ -1245,6 +1245,9 @@
     <ClCompile Include="rpcs3qt\clans_settings_dialog.cpp">
       <Filter>Gui\rpcn</Filter>
     </ClCompile>
+    <ClCompile Include="Input\camera_video_sink.cpp">
+      <Filter>Io\camera</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\ds4_pad_handler.h">
@@ -1474,6 +1477,9 @@
     </ClInclude>
     <ClInclude Include="rpcs3qt\custom_tree_widget.h">
       <Filter>Gui\widgets</Filter>
+    </ClInclude>
+    <ClInclude Include="Input\camera_video_sink.h">
+      <Filter>Io\camera</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
